// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetabaseApi table_query_metadata should have the correct metadata for table 1 1`] = `
Object {
  "active": true,
  "caveats": null,
  "db": Object {
    "cache_field_values_schedule": "0 0 0 * * ? *",
    "caveats": null,
    "description": null,
    "engine": "h2",
    "features": Array [
      "basic-aggregations",
      "standard-deviation-aggregations",
      "expression-aggregations",
      "foreign-keys",
      "native-parameters",
      "nested-queries",
      "expressions",
      "case-sensitivity-string-filter-options",
      "binning",
    ],
    "id": 1,
    "is_full_sync": true,
    "is_sample": true,
    "metadata_sync_schedule": "0 0 * * * ? *",
    "name": "Sample Dataset",
    "options": null,
    "points_of_interest": null,
  },
  "db_id": 1,
  "description": "This is a confirmed order for a product from a user.",
  "dimension_options": Object {
    "0": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute",
      ],
      "name": "Minute",
      "type": "type/DateTime",
    },
    "1": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour",
      ],
      "name": "Hour",
      "type": "type/DateTime",
    },
    "10": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-month",
      ],
      "name": "Day of Month",
      "type": "type/DateTime",
    },
    "11": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-year",
      ],
      "name": "Day of Year",
      "type": "type/DateTime",
    },
    "12": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week-of-year",
      ],
      "name": "Week of Year",
      "type": "type/DateTime",
    },
    "13": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month-of-year",
      ],
      "name": "Month of Year",
      "type": "type/DateTime",
    },
    "14": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter-of-year",
      ],
      "name": "Quarter of Year",
      "type": "type/DateTime",
    },
    "15": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Number",
    },
    "16": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        10,
      ],
      "name": "10 bins",
      "type": "type/Number",
    },
    "17": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        50,
      ],
      "name": "50 bins",
      "type": "type/Number",
    },
    "18": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        100,
      ],
      "name": "100 bins",
      "type": "type/Number",
    },
    "19": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Number",
    },
    "2": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day",
      ],
      "name": "Day",
      "type": "type/DateTime",
    },
    "20": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Coordinate",
    },
    "21": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        0.1,
      ],
      "name": "Bin every 0.1 degrees",
      "type": "type/Coordinate",
    },
    "22": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        1,
      ],
      "name": "Bin every 1 degree",
      "type": "type/Coordinate",
    },
    "23": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        10,
      ],
      "name": "Bin every 10 degrees",
      "type": "type/Coordinate",
    },
    "24": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        20,
      ],
      "name": "Bin every 20 degrees",
      "type": "type/Coordinate",
    },
    "25": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Coordinate",
    },
    "3": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week",
      ],
      "name": "Week",
      "type": "type/DateTime",
    },
    "4": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month",
      ],
      "name": "Month",
      "type": "type/DateTime",
    },
    "5": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter",
      ],
      "name": "Quarter",
      "type": "type/DateTime",
    },
    "6": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "year",
      ],
      "name": "Year",
      "type": "type/DateTime",
    },
    "7": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute-of-hour",
      ],
      "name": "Minute of Hour",
      "type": "type/DateTime",
    },
    "8": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour-of-day",
      ],
      "name": "Hour of Day",
      "type": "type/DateTime",
    },
    "9": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-week",
      ],
      "name": "Day of Week",
      "type": "type/DateTime",
    },
  },
  "display_name": "Orders",
  "entity_name": null,
  "entity_type": "entity/TransactionTable",
  "fields": Array [
    Object {
      "active": true,
      "base_type": "type/DateTime",
      "caveats": null,
      "database_type": "TIMESTAMP",
      "default_dimension_option": Object {
        "mbql": Array [
          "datetime-field",
          null,
          "day",
        ],
        "name": "Day",
        "type": "type/DateTime",
      },
      "description": "The date and time an order was submitted.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute",
          ],
          "name": "Minute",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour",
          ],
          "name": "Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day",
          ],
          "name": "Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week",
          ],
          "name": "Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month",
          ],
          "name": "Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter",
          ],
          "name": "Quarter",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "year",
          ],
          "name": "Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute-of-hour",
          ],
          "name": "Minute of Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour-of-day",
          ],
          "name": "Hour of Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-week",
          ],
          "name": "Day of Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-month",
          ],
          "name": "Day of Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-year",
          ],
          "name": "Day of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week-of-year",
          ],
          "name": "Week of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month-of-year",
          ],
          "name": "Month of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter-of-year",
          ],
          "name": "Quarter of Year",
          "type": "type/DateTime",
        },
      ],
      "dimensions": Array [],
      "display_name": "Created At",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 10001,
          "nil%": 0,
        },
        "type": Object {
          "type/DateTime": Object {
            "earliest": "2016-05-01T01:56:13.352Z",
            "latest": "2020-04-19T21:07:15.657Z",
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 1,
      "name": "CREATED_AT",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/CreationTimestamp",
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "Discount amount.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Discount",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 701,
          "nil%": 0.898,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 5.161255547580326,
            "max": 61.69684269960571,
            "min": 0.17088996672584322,
            "q1": 2.9786226681458743,
            "q3": 7.338187788658235,
            "sd": 3.053663125001991,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 35,
      "name": "DISCOUNT",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Discount",
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/BigInteger",
      "caveats": null,
      "database_type": "BIGINT",
      "default_dimension_option": null,
      "description": "This is a unique ID for the product. It is also called the “Invoice number” or “Confirmation number” in customer facing emails and screens.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 10000,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 5000.5,
            "max": 10000,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 2,
      "name": "ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/PK",
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Integer",
      "caveats": null,
      "database_type": "INTEGER",
      "default_dimension_option": null,
      "description": "The product ID. This is an internal identifier for the product, NOT the SKU.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Product ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 200,
          "nil%": 0,
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": 24,
      "has_field_values": "none",
      "id": 3,
      "name": "PRODUCT_ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/FK",
      "table_id": 1,
      "target": Object {
        "active": true,
        "base_type": "type/BigInteger",
        "caveats": null,
        "database_type": "BIGINT",
        "description": "The numerical product number. Only used internally. All external communication should use the title or EAN.",
        "display_name": "ID",
        "fingerprint": Object {
          "global": Object {
            "distinct-count": 200,
          },
          "type": Object {
            "type/Number": Object {
              "avg": 100.5,
              "max": 200,
              "min": 1,
            },
          },
        },
        "fingerprint_version": 2,
        "fk_target_field_id": null,
        "has_field_values": "none",
        "id": 24,
        "name": "ID",
        "parent_id": null,
        "points_of_interest": null,
        "position": 0,
        "preview_display": true,
        "settings": null,
        "special_type": "type/PK",
        "table_id": 3,
        "visibility_type": "normal",
      },
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Integer",
      "caveats": null,
      "database_type": "INTEGER",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "Number of products bought.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Quantity",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 62,
          "nil%": 0,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 3.7015,
            "max": 100,
            "min": 0,
            "q1": 1.755882607764982,
            "q3": 4.882654507928044,
            "sd": 4.214258386403798,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 36,
      "name": "QUANTITY",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Quantity",
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "The raw, pre-tax cost of the order. Note that this might be different in the future from the product price due to promotions, credits, etc.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Subtotal",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 340,
          "nil%": 0,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 77.01295465356547,
            "max": 148.22900526552291,
            "min": 15.691943673970439,
            "q1": 49.74894519060184,
            "q3": 105.42965746993103,
            "sd": 32.53705013056317,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 4,
      "name": "SUBTOTAL",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": null,
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "This is the amount of local and federal taxes that are collected on the purchase. Note that other governmental fees on some products are not included here, but instead are accounted for in the subtotal.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Tax",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 797,
          "nil%": 0,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 3.8722100000000004,
            "max": 11.12,
            "min": 0,
            "q1": 2.273340386603857,
            "q3": 5.337275338216307,
            "sd": 2.3206651358900316,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 5,
      "name": "TAX",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": null,
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "The total billed amount.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Total",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 10000,
          "nil%": 0,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 82.96014815230805,
            "max": 238.32732001721533,
            "min": 12.061602936923117,
            "q1": 52.006147617878135,
            "q3": 109.55803018499738,
            "sd": 38.35967664847571,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 6,
      "name": "TOTAL",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Income",
      "table_id": 1,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Integer",
      "caveats": null,
      "database_type": "INTEGER",
      "default_dimension_option": null,
      "description": "The id of the user who made this order. Note that in some cases where an order was created on behalf of a customer who phoned the order in, this might be the employee who handled the request.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "User ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 929,
          "nil%": 0,
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": 13,
      "has_field_values": "none",
      "id": 7,
      "name": "USER_ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/FK",
      "table_id": 1,
      "target": Object {
        "active": true,
        "base_type": "type/BigInteger",
        "caveats": null,
        "database_type": "BIGINT",
        "description": "A unique identifier given to each user.",
        "display_name": "ID",
        "fingerprint": Object {
          "global": Object {
            "distinct-count": 2500,
          },
          "type": Object {
            "type/Number": Object {
              "avg": 1250.5,
              "max": 2500,
              "min": 1,
            },
          },
        },
        "fingerprint_version": 2,
        "fk_target_field_id": null,
        "has_field_values": "none",
        "id": 13,
        "name": "ID",
        "parent_id": null,
        "points_of_interest": null,
        "position": 0,
        "preview_display": true,
        "settings": null,
        "special_type": "type/PK",
        "table_id": 2,
        "visibility_type": "normal",
      },
      "visibility_type": "normal",
    },
  ],
  "id": 1,
  "metrics": Array [],
  "name": "ORDERS",
  "points_of_interest": null,
  "rows": 12805,
  "schema": "PUBLIC",
  "segments": Array [],
  "show_in_getting_started": false,
  "visibility_type": null,
}
`;

exports[`MetabaseApi table_query_metadata should have the correct metadata for table 2 1`] = `
Object {
  "active": true,
  "caveats": null,
  "db": Object {
    "cache_field_values_schedule": "0 0 0 * * ? *",
    "caveats": null,
    "description": null,
    "engine": "h2",
    "features": Array [
      "basic-aggregations",
      "standard-deviation-aggregations",
      "expression-aggregations",
      "foreign-keys",
      "native-parameters",
      "nested-queries",
      "expressions",
      "case-sensitivity-string-filter-options",
      "binning",
    ],
    "id": 1,
    "is_full_sync": true,
    "is_sample": true,
    "metadata_sync_schedule": "0 0 * * * ? *",
    "name": "Sample Dataset",
    "options": null,
    "points_of_interest": null,
  },
  "db_id": 1,
  "description": "This is a user account. Note that employees and customer support staff will have accounts.",
  "dimension_options": Object {
    "0": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute",
      ],
      "name": "Minute",
      "type": "type/DateTime",
    },
    "1": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour",
      ],
      "name": "Hour",
      "type": "type/DateTime",
    },
    "10": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-month",
      ],
      "name": "Day of Month",
      "type": "type/DateTime",
    },
    "11": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-year",
      ],
      "name": "Day of Year",
      "type": "type/DateTime",
    },
    "12": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week-of-year",
      ],
      "name": "Week of Year",
      "type": "type/DateTime",
    },
    "13": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month-of-year",
      ],
      "name": "Month of Year",
      "type": "type/DateTime",
    },
    "14": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter-of-year",
      ],
      "name": "Quarter of Year",
      "type": "type/DateTime",
    },
    "15": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Number",
    },
    "16": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        10,
      ],
      "name": "10 bins",
      "type": "type/Number",
    },
    "17": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        50,
      ],
      "name": "50 bins",
      "type": "type/Number",
    },
    "18": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        100,
      ],
      "name": "100 bins",
      "type": "type/Number",
    },
    "19": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Number",
    },
    "2": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day",
      ],
      "name": "Day",
      "type": "type/DateTime",
    },
    "20": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Coordinate",
    },
    "21": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        0.1,
      ],
      "name": "Bin every 0.1 degrees",
      "type": "type/Coordinate",
    },
    "22": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        1,
      ],
      "name": "Bin every 1 degree",
      "type": "type/Coordinate",
    },
    "23": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        10,
      ],
      "name": "Bin every 10 degrees",
      "type": "type/Coordinate",
    },
    "24": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        20,
      ],
      "name": "Bin every 20 degrees",
      "type": "type/Coordinate",
    },
    "25": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Coordinate",
    },
    "3": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week",
      ],
      "name": "Week",
      "type": "type/DateTime",
    },
    "4": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month",
      ],
      "name": "Month",
      "type": "type/DateTime",
    },
    "5": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter",
      ],
      "name": "Quarter",
      "type": "type/DateTime",
    },
    "6": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "year",
      ],
      "name": "Year",
      "type": "type/DateTime",
    },
    "7": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute-of-hour",
      ],
      "name": "Minute of Hour",
      "type": "type/DateTime",
    },
    "8": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour-of-day",
      ],
      "name": "Hour of Day",
      "type": "type/DateTime",
    },
    "9": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-week",
      ],
      "name": "Day of Week",
      "type": "type/DateTime",
    },
  },
  "display_name": "People",
  "entity_name": null,
  "entity_type": "entity/UserTable",
  "fields": Array [
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The street address of the account’s billing address",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Address",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2490,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 20.85,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 8,
      "name": "ADDRESS",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": null,
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Date",
      "caveats": null,
      "database_type": "DATE",
      "default_dimension_option": Object {
        "mbql": Array [
          "datetime-field",
          null,
          "day",
        ],
        "name": "Day",
        "type": "type/DateTime",
      },
      "description": "The date of birth of the user",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute",
          ],
          "name": "Minute",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour",
          ],
          "name": "Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day",
          ],
          "name": "Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week",
          ],
          "name": "Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month",
          ],
          "name": "Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter",
          ],
          "name": "Quarter",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "year",
          ],
          "name": "Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute-of-hour",
          ],
          "name": "Minute of Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour-of-day",
          ],
          "name": "Hour of Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-week",
          ],
          "name": "Day of Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-month",
          ],
          "name": "Day of Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-year",
          ],
          "name": "Day of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week-of-year",
          ],
          "name": "Week of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month-of-year",
          ],
          "name": "Month of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter-of-year",
          ],
          "name": "Quarter of Year",
          "type": "type/DateTime",
        },
      ],
      "dimensions": Array [],
      "display_name": "Birth Date",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2308,
          "nil%": 0,
        },
        "type": Object {
          "type/DateTime": Object {
            "earliest": "1958-04-26T08:00:00.000Z",
            "latest": "2000-04-03T07:00:00.000Z",
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 9,
      "name": "BIRTH_DATE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": null,
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The city of the account’s billing address",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "City",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 1966,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 8.284,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 10,
      "name": "CITY",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/City",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/DateTime",
      "caveats": null,
      "database_type": "TIMESTAMP",
      "default_dimension_option": Object {
        "mbql": Array [
          "datetime-field",
          null,
          "day",
        ],
        "name": "Day",
        "type": "type/DateTime",
      },
      "description": "The date the user record was created. Also referred to as the user’s \\"join date\\"",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute",
          ],
          "name": "Minute",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour",
          ],
          "name": "Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day",
          ],
          "name": "Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week",
          ],
          "name": "Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month",
          ],
          "name": "Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter",
          ],
          "name": "Quarter",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "year",
          ],
          "name": "Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute-of-hour",
          ],
          "name": "Minute of Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour-of-day",
          ],
          "name": "Hour of Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-week",
          ],
          "name": "Day of Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-month",
          ],
          "name": "Day of Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-year",
          ],
          "name": "Day of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week-of-year",
          ],
          "name": "Week of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month-of-year",
          ],
          "name": "Month of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter-of-year",
          ],
          "name": "Quarter of Year",
          "type": "type/DateTime",
        },
      ],
      "dimensions": Array [],
      "display_name": "Created At",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2500,
          "nil%": 0,
        },
        "type": Object {
          "type/DateTime": Object {
            "earliest": "2016-04-20T04:35:18.752Z",
            "latest": "2019-04-19T21:06:27.300Z",
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 11,
      "name": "CREATED_AT",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/CreationTimestamp",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The contact email for the account.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Email",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2500,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 24.1824,
            "percent-email": 1,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 12,
      "name": "EMAIL",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Email",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/BigInteger",
      "caveats": null,
      "database_type": "BIGINT",
      "default_dimension_option": null,
      "description": "A unique identifier given to each user.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2500,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 1250.5,
            "max": 2500,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 13,
      "name": "ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/PK",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Coordinate",
      },
      "description": "This is the latitude of the user on sign-up. It might be updated in the future to the last seen location.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            0.1,
          ],
          "name": "Bin every 0.1 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            1,
          ],
          "name": "Bin every 1 degree",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            10,
          ],
          "name": "Bin every 10 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            20,
          ],
          "name": "Bin every 20 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Coordinate",
        },
      ],
      "dimensions": Array [],
      "display_name": "Latitude",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2491,
          "nil%": 0,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 39.87934670484002,
            "max": 70.6355001,
            "min": 25.775827,
            "q1": 35.302705923023126,
            "q3": 43.773802584662,
            "sd": 6.390832341883712,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 14,
      "name": "LATITUDE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Latitude",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Coordinate",
      },
      "description": "This is the longitude of the user on sign-up. It might be updated in the future to the last seen location.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            0.1,
          ],
          "name": "Bin every 0.1 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            1,
          ],
          "name": "Bin every 1 degree",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            10,
          ],
          "name": "Bin every 10 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "bin-width",
            20,
          ],
          "name": "Bin every 20 degrees",
          "type": "type/Coordinate",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Coordinate",
        },
      ],
      "dimensions": Array [],
      "display_name": "Longitude",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2491,
          "nil%": 0,
        },
        "type": Object {
          "type/Number": Object {
            "avg": -95.18741780363999,
            "max": -67.96735199999999,
            "min": -166.5425726,
            "q1": -101.58350792373135,
            "q3": -84.65289348288829,
            "sd": 15.399698968175663,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 15,
      "name": "LONGITUDE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Longitude",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The name of the user who owns an account",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Name",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2499,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 13.532,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 16,
      "name": "NAME",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Name",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "This is the salted password of the user. It should not be visible",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Password",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2500,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 36,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 17,
      "name": "PASSWORD",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": null,
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The channel through which we acquired this user. Valid values include: Affiliate, Facebook, Google, Organic and Twitter",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Source",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 5,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 7.4084,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 18,
      "name": "SOURCE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Source",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "CHAR",
      "default_dimension_option": null,
      "description": "The state or province of the account’s billing address",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "State",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 49,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 2,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 19,
      "name": "STATE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/State",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "CHAR",
      "default_dimension_option": null,
      "description": "The postal code of the account’s billing address",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Zip",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 2234,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 5,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 20,
      "name": "ZIP",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/ZipCode",
      "table_id": 2,
      "target": null,
      "visibility_type": "normal",
    },
  ],
  "id": 2,
  "metrics": Array [],
  "name": "PEOPLE",
  "points_of_interest": null,
  "rows": 2500,
  "schema": "PUBLIC",
  "segments": Array [],
  "show_in_getting_started": false,
  "visibility_type": null,
}
`;

exports[`MetabaseApi table_query_metadata should have the correct metadata for table 3 1`] = `
Object {
  "active": true,
  "caveats": null,
  "db": Object {
    "cache_field_values_schedule": "0 0 0 * * ? *",
    "caveats": null,
    "description": null,
    "engine": "h2",
    "features": Array [
      "basic-aggregations",
      "standard-deviation-aggregations",
      "expression-aggregations",
      "foreign-keys",
      "native-parameters",
      "nested-queries",
      "expressions",
      "case-sensitivity-string-filter-options",
      "binning",
    ],
    "id": 1,
    "is_full_sync": true,
    "is_sample": true,
    "metadata_sync_schedule": "0 0 * * * ? *",
    "name": "Sample Dataset",
    "options": null,
    "points_of_interest": null,
  },
  "db_id": 1,
  "description": "This is our product catalog. It includes all products ever sold by the Sample Company.",
  "dimension_options": Object {
    "0": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute",
      ],
      "name": "Minute",
      "type": "type/DateTime",
    },
    "1": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour",
      ],
      "name": "Hour",
      "type": "type/DateTime",
    },
    "10": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-month",
      ],
      "name": "Day of Month",
      "type": "type/DateTime",
    },
    "11": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-year",
      ],
      "name": "Day of Year",
      "type": "type/DateTime",
    },
    "12": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week-of-year",
      ],
      "name": "Week of Year",
      "type": "type/DateTime",
    },
    "13": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month-of-year",
      ],
      "name": "Month of Year",
      "type": "type/DateTime",
    },
    "14": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter-of-year",
      ],
      "name": "Quarter of Year",
      "type": "type/DateTime",
    },
    "15": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Number",
    },
    "16": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        10,
      ],
      "name": "10 bins",
      "type": "type/Number",
    },
    "17": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        50,
      ],
      "name": "50 bins",
      "type": "type/Number",
    },
    "18": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        100,
      ],
      "name": "100 bins",
      "type": "type/Number",
    },
    "19": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Number",
    },
    "2": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day",
      ],
      "name": "Day",
      "type": "type/DateTime",
    },
    "20": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Coordinate",
    },
    "21": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        0.1,
      ],
      "name": "Bin every 0.1 degrees",
      "type": "type/Coordinate",
    },
    "22": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        1,
      ],
      "name": "Bin every 1 degree",
      "type": "type/Coordinate",
    },
    "23": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        10,
      ],
      "name": "Bin every 10 degrees",
      "type": "type/Coordinate",
    },
    "24": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        20,
      ],
      "name": "Bin every 20 degrees",
      "type": "type/Coordinate",
    },
    "25": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Coordinate",
    },
    "3": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week",
      ],
      "name": "Week",
      "type": "type/DateTime",
    },
    "4": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month",
      ],
      "name": "Month",
      "type": "type/DateTime",
    },
    "5": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter",
      ],
      "name": "Quarter",
      "type": "type/DateTime",
    },
    "6": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "year",
      ],
      "name": "Year",
      "type": "type/DateTime",
    },
    "7": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute-of-hour",
      ],
      "name": "Minute of Hour",
      "type": "type/DateTime",
    },
    "8": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour-of-day",
      ],
      "name": "Hour of Day",
      "type": "type/DateTime",
    },
    "9": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-week",
      ],
      "name": "Day of Week",
      "type": "type/DateTime",
    },
  },
  "display_name": "Products",
  "entity_name": null,
  "entity_type": "entity/ProductTable",
  "fields": Array [
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The type of product, valid values include: Doohicky, Gadget, Gizmo and Widget",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Category",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 4,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 6.375,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 21,
      "name": "CATEGORY",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Category",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/DateTime",
      "caveats": null,
      "database_type": "TIMESTAMP",
      "default_dimension_option": Object {
        "mbql": Array [
          "datetime-field",
          null,
          "day",
        ],
        "name": "Day",
        "type": "type/DateTime",
      },
      "description": "The date the product was added to our catalog.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute",
          ],
          "name": "Minute",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour",
          ],
          "name": "Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day",
          ],
          "name": "Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week",
          ],
          "name": "Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month",
          ],
          "name": "Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter",
          ],
          "name": "Quarter",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "year",
          ],
          "name": "Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute-of-hour",
          ],
          "name": "Minute of Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour-of-day",
          ],
          "name": "Hour of Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-week",
          ],
          "name": "Day of Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-month",
          ],
          "name": "Day of Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-year",
          ],
          "name": "Day of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week-of-year",
          ],
          "name": "Week of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month-of-year",
          ],
          "name": "Month of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter-of-year",
          ],
          "name": "Quarter of Year",
          "type": "type/DateTime",
        },
      ],
      "dimensions": Array [],
      "display_name": "Created At",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 200,
          "nil%": 0,
        },
        "type": Object {
          "type/DateTime": Object {
            "earliest": "2016-04-27T02:29:55.147Z",
            "latest": "2019-04-15T20:34:19.931Z",
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 22,
      "name": "CREATED_AT",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/CreationTimestamp",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "CHAR",
      "default_dimension_option": null,
      "description": "The international article number. A 13 digit number uniquely identifying the product.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Ean",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 200,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 13,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 23,
      "name": "EAN",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": null,
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/BigInteger",
      "caveats": null,
      "database_type": "BIGINT",
      "default_dimension_option": null,
      "description": "The numerical product number. Only used internally. All external communication should use the title or EAN.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 200,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 100.5,
            "max": 200,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 24,
      "name": "ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/PK",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "The list price of the product. Note that this is not always the price the product sold for due to discounts, promotions, etc.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Price",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 170,
          "nil%": 0,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 55.74639966792074,
            "max": 98.81933684368194,
            "min": 15.691943673970439,
            "q1": 37.25154462926434,
            "q3": 75.45898071609447,
            "sd": 21.711481557852057,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 25,
      "name": "PRICE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": null,
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Float",
      "caveats": null,
      "database_type": "DOUBLE",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "The average rating users have given the product. This ranges from 1 - 5",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Rating",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 23,
          "nil%": 0,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 3.4715,
            "max": 5,
            "min": 0,
            "q1": 3.5120465053408525,
            "q3": 4.216124969497314,
            "sd": 1.3605488657451452,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 26,
      "name": "RATING",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Score",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The name of the product as it should be displayed to customers.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Title",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 199,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 21.495,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 27,
      "name": "TITLE",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Title",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The source of the product.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Vendor",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 200,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 20.6,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 28,
      "name": "VENDOR",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Company",
      "table_id": 3,
      "target": null,
      "visibility_type": "normal",
    },
  ],
  "id": 3,
  "metrics": Array [],
  "name": "PRODUCTS",
  "points_of_interest": null,
  "rows": 200,
  "schema": "PUBLIC",
  "segments": Array [],
  "show_in_getting_started": false,
  "visibility_type": null,
}
`;

exports[`MetabaseApi table_query_metadata should have the correct metadata for table 4 1`] = `
Object {
  "active": true,
  "caveats": null,
  "db": Object {
    "cache_field_values_schedule": "0 0 0 * * ? *",
    "caveats": null,
    "description": null,
    "engine": "h2",
    "features": Array [
      "basic-aggregations",
      "standard-deviation-aggregations",
      "expression-aggregations",
      "foreign-keys",
      "native-parameters",
      "nested-queries",
      "expressions",
      "case-sensitivity-string-filter-options",
      "binning",
    ],
    "id": 1,
    "is_full_sync": true,
    "is_sample": true,
    "metadata_sync_schedule": "0 0 * * * ? *",
    "name": "Sample Dataset",
    "options": null,
    "points_of_interest": null,
  },
  "db_id": 1,
  "description": "These are reviews our customers have left on products. Note that these are not tied to orders so it is possible people have reviewed products they did not purchase from us.",
  "dimension_options": Object {
    "0": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute",
      ],
      "name": "Minute",
      "type": "type/DateTime",
    },
    "1": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour",
      ],
      "name": "Hour",
      "type": "type/DateTime",
    },
    "10": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-month",
      ],
      "name": "Day of Month",
      "type": "type/DateTime",
    },
    "11": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-year",
      ],
      "name": "Day of Year",
      "type": "type/DateTime",
    },
    "12": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week-of-year",
      ],
      "name": "Week of Year",
      "type": "type/DateTime",
    },
    "13": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month-of-year",
      ],
      "name": "Month of Year",
      "type": "type/DateTime",
    },
    "14": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter-of-year",
      ],
      "name": "Quarter of Year",
      "type": "type/DateTime",
    },
    "15": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Number",
    },
    "16": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        10,
      ],
      "name": "10 bins",
      "type": "type/Number",
    },
    "17": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        50,
      ],
      "name": "50 bins",
      "type": "type/Number",
    },
    "18": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "num-bins",
        100,
      ],
      "name": "100 bins",
      "type": "type/Number",
    },
    "19": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Number",
    },
    "2": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day",
      ],
      "name": "Day",
      "type": "type/DateTime",
    },
    "20": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "default",
      ],
      "name": "Auto bin",
      "type": "type/Coordinate",
    },
    "21": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        0.1,
      ],
      "name": "Bin every 0.1 degrees",
      "type": "type/Coordinate",
    },
    "22": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        1,
      ],
      "name": "Bin every 1 degree",
      "type": "type/Coordinate",
    },
    "23": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        10,
      ],
      "name": "Bin every 10 degrees",
      "type": "type/Coordinate",
    },
    "24": Object {
      "mbql": Array [
        "binning-strategy",
        null,
        "bin-width",
        20,
      ],
      "name": "Bin every 20 degrees",
      "type": "type/Coordinate",
    },
    "25": Object {
      "mbql": null,
      "name": "Don't bin",
      "type": "type/Coordinate",
    },
    "3": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "week",
      ],
      "name": "Week",
      "type": "type/DateTime",
    },
    "4": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "month",
      ],
      "name": "Month",
      "type": "type/DateTime",
    },
    "5": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "quarter",
      ],
      "name": "Quarter",
      "type": "type/DateTime",
    },
    "6": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "year",
      ],
      "name": "Year",
      "type": "type/DateTime",
    },
    "7": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "minute-of-hour",
      ],
      "name": "Minute of Hour",
      "type": "type/DateTime",
    },
    "8": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "hour-of-day",
      ],
      "name": "Hour of Day",
      "type": "type/DateTime",
    },
    "9": Object {
      "mbql": Array [
        "datetime-field",
        null,
        "day-of-week",
      ],
      "name": "Day of Week",
      "type": "type/DateTime",
    },
  },
  "display_name": "Reviews",
  "entity_name": null,
  "entity_type": "entity/GenericTable",
  "fields": Array [
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "CLOB",
      "default_dimension_option": null,
      "description": "The review the user left. Limited to 2000 characters.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Body",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 1112,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 177.41996402877697,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 29,
      "name": "BODY",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": false,
      "settings": null,
      "special_type": "type/Description",
      "table_id": 4,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/DateTime",
      "caveats": null,
      "database_type": "TIMESTAMP",
      "default_dimension_option": Object {
        "mbql": Array [
          "datetime-field",
          null,
          "day",
        ],
        "name": "Day",
        "type": "type/DateTime",
      },
      "description": "The day and time a review was written by a user.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute",
          ],
          "name": "Minute",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour",
          ],
          "name": "Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day",
          ],
          "name": "Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week",
          ],
          "name": "Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month",
          ],
          "name": "Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter",
          ],
          "name": "Quarter",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "year",
          ],
          "name": "Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "minute-of-hour",
          ],
          "name": "Minute of Hour",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "hour-of-day",
          ],
          "name": "Hour of Day",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-week",
          ],
          "name": "Day of Week",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-month",
          ],
          "name": "Day of Month",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "day-of-year",
          ],
          "name": "Day of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "week-of-year",
          ],
          "name": "Week of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "month-of-year",
          ],
          "name": "Month of Year",
          "type": "type/DateTime",
        },
        Object {
          "mbql": Array [
            "datetime-field",
            null,
            "quarter-of-year",
          ],
          "name": "Quarter of Year",
          "type": "type/DateTime",
        },
      ],
      "dimensions": Array [],
      "display_name": "Created At",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 1112,
          "nil%": 0,
        },
        "type": Object {
          "type/DateTime": Object {
            "earliest": "2016-06-03T07:37:05.818Z",
            "latest": "2020-04-19T21:15:25.677Z",
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 30,
      "name": "CREATED_AT",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/CreationTimestamp",
      "table_id": 4,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/BigInteger",
      "caveats": null,
      "database_type": "BIGINT",
      "default_dimension_option": null,
      "description": "A unique internal identifier for the review. Should not be used externally.",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 1112,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 556.5,
            "max": 1112,
            "min": 1,
          },
        },
      },
      "fingerprint_version": 2,
      "fk_target_field_id": null,
      "has_field_values": "none",
      "id": 31,
      "name": "ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/PK",
      "table_id": 4,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Integer",
      "caveats": null,
      "database_type": "INTEGER",
      "default_dimension_option": null,
      "description": "The product the review was for",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Product ID",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 176,
          "nil%": 0,
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": 24,
      "has_field_values": "none",
      "id": 32,
      "name": "PRODUCT_ID",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/FK",
      "table_id": 4,
      "target": Object {
        "active": true,
        "base_type": "type/BigInteger",
        "caveats": null,
        "database_type": "BIGINT",
        "description": "The numerical product number. Only used internally. All external communication should use the title or EAN.",
        "display_name": "ID",
        "fingerprint": Object {
          "global": Object {
            "distinct-count": 200,
          },
          "type": Object {
            "type/Number": Object {
              "avg": 100.5,
              "max": 200,
              "min": 1,
            },
          },
        },
        "fingerprint_version": 2,
        "fk_target_field_id": null,
        "has_field_values": "none",
        "id": 24,
        "name": "ID",
        "parent_id": null,
        "points_of_interest": null,
        "position": 0,
        "preview_display": true,
        "settings": null,
        "special_type": "type/PK",
        "table_id": 3,
        "visibility_type": "normal",
      },
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Integer",
      "caveats": null,
      "database_type": "SMALLINT",
      "default_dimension_option": Object {
        "mbql": Array [
          "binning-strategy",
          null,
          "default",
        ],
        "name": "Auto bin",
        "type": "type/Number",
      },
      "description": "The rating (on a scale of 1-5) the user left.",
      "dimension_options": Array [
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "default",
          ],
          "name": "Auto bin",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            10,
          ],
          "name": "10 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            50,
          ],
          "name": "50 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": Array [
            "binning-strategy",
            null,
            "num-bins",
            100,
          ],
          "name": "100 bins",
          "type": "type/Number",
        },
        Object {
          "mbql": null,
          "name": "Don't bin",
          "type": "type/Number",
        },
      ],
      "dimensions": Array [],
      "display_name": "Rating",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 5,
          "nil%": 0,
        },
        "type": Object {
          "type/Number": Object {
            "avg": 3.987410071942446,
            "max": 5,
            "min": 1,
            "q1": 3.54744353181696,
            "q3": 4.764807071650455,
            "sd": 1.0443899855660577,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "list",
      "id": 33,
      "name": "RATING",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": "type/Score",
      "table_id": 4,
      "target": null,
      "visibility_type": "normal",
    },
    Object {
      "active": true,
      "base_type": "type/Text",
      "caveats": null,
      "database_type": "VARCHAR",
      "default_dimension_option": null,
      "description": "The user who left the review",
      "dimension_options": Array [],
      "dimensions": Array [],
      "display_name": "Reviewer",
      "fingerprint": Object {
        "global": Object {
          "distinct-count": 1076,
          "nil%": 0,
        },
        "type": Object {
          "type/Text": Object {
            "average-length": 9.972122302158274,
            "percent-email": 0,
            "percent-json": 0,
            "percent-url": 0,
          },
        },
      },
      "fingerprint_version": 4,
      "fk_target_field_id": null,
      "has_field_values": "search",
      "id": 34,
      "name": "REVIEWER",
      "parent_id": null,
      "points_of_interest": null,
      "position": 0,
      "preview_display": true,
      "settings": null,
      "special_type": null,
      "table_id": 4,
      "target": null,
      "visibility_type": "normal",
    },
  ],
  "id": 4,
  "metrics": Array [],
  "name": "REVIEWS",
  "points_of_interest": null,
  "rows": 984,
  "schema": "PUBLIC",
  "segments": Array [],
  "show_in_getting_started": false,
  "visibility_type": null,
}
`;
